fix: Get rid of some insecure content warnings.

--- a/web/content/posts/2005-07-12-the-mt-headquarters-mystery.mdx
+++ b/web/content/posts/2005-07-12-the-mt-headquarters-mystery.mdx
@@ -24,7 +24,7 @@ Being the type of person that I am, wanting to believe that companies on the int
 
 So after shopping a bit, and spending some time at the Apple Store, we grabbed some frappuccinos and headed back to the car after a fun night. Then I remembered to check the same building since we were coming from the other direction. We found ourselves kitty-corner from the place, and all I saw were shops. I was sure that the address was correct. Wanting to take a closer look, we ran across the street and then Jen pointed to a shop that had the number **410**, but it wasn't Media Temple:
 
-[<img src="http://photos23.flickr.com/25505216_682628e4e2_m.jpg" width="240" height="180" alt="(mt) = Fashion Store?" class="posted" />][7][<img src="http://photos23.flickr.com/25505170_db70164c98_o.jpg" width="240" height="180" alt="Media Temple's Headquarters?" class="posted" />][8]
+[<img src="https://photos23.flickr.com/25505216_682628e4e2_m.jpg" width="240" height="180" alt="(mt) = Fashion Store?" class="posted" />][7][<img src="https://photos23.flickr.com/25505170_db70164c98_o.jpg" width="240" height="180" alt="Media Temple's Headquarters?" class="posted" />][8]
 
 "**A fashion store?** This can't be right," I thought. But there it was, *410 Broadway*, but there was no "B" no second floor, no nothing. Jen and I just sort of hung around there, looked to one side of the building, and then the address of the side of the of the building that did have a second floor, which was on *4th Street*. So we went back to the fashion store and looked again and found 3 mailboxes, *410, 410B* and *410C*. Just as quick as a Japanese man would say "Nani?" I thought, "This is nuts!"
 
