--- a/web/content/posts/2005-07-21-the-mt-reprise.mdx
+++ b/web/content/posts/2005-07-21-the-mt-reprise.mdx
@@ -7,7 +7,7 @@ Ahhh, nothing like tea to keep you going in the morning. So let's start with thi
 
 Two days ago, I had made another 85-mile trip to Los Angeles to visit [Jenni][1]. After eating, getting [my first model][2] in a long time, and spending money elsewhere for no reason, we found ourselves back in Santa Monica. Jen was heading to a haircut at the [Vidal Sassoon Academy][3], so I had about 2-and-a-half hours to spare. "Why don't you try going around the block to find Media Temple, and try calling Jason too," she said. Well, here was my chance, right smack in the middle of the day, so they had to be in business. After dropping her off, I took a few laps around the block, finding nothing. Discouraged, I decided to park at the mall and walk around. So what does a detective do when he gets lost? Go back to where it began.
 
-<a href="http://www.flickr.com/photos/avalonstar/27599304/" title="Photo Sharing"><img src="http://photos23.flickr.com/27599304_aa13fb27e2_m.jpg" width="240" height="160" alt="It was RIGHT THERE." /></a><a href="http://www.flickr.com/photos/avalonstar/27599390/" title="Photo Sharing"><img src="http://photos21.flickr.com/27599390_9885ff69d7_m.jpg" width="240" height="160" alt="Hmm, a listing." /></a>
+<a href="http://www.flickr.com/photos/avalonstar/27599304/" title="Photo Sharing"><img src="https://photos23.flickr.com/27599304_aa13fb27e2_m.jpg" width="240" height="160" alt="It was RIGHT THERE." /></a><a href="http://www.flickr.com/photos/avalonstar/27599390/" title="Photo Sharing"><img src="https://photos21.flickr.com/27599390_9885ff69d7_m.jpg" width="240" height="160" alt="Hmm, a listing." /></a>
 
 "Holy painted signs, Batman," I thought (not really, but something along that line). Now remember that it was 10PM when I saw this building the first time, so it would have never occurred to me to look. Besides, the sign pointed to the alley--who would want to go down a dark alley at that time of the night? But this time, it was a bright and sunny day and I could clearly see that the alley was clear, so I walked down. (Let me tell you that I have a much deeper appreciation for people that like to do their snooping work during the day. Forget doing it at night, unless you have a flashlight and can look inconspicuous using it, you'll miss stuff like this.) So I walked up and there was a steel door leading to another alley (to the back of the storefronts I assumed), and then a doorbell next to it. Next thing I'll mention is to assume nothing when you're looking for an address in the city, because I thought "storefront", "windows" and "logo," none of which I found the first time around.
 
@@ -15,7 +15,7 @@ I called Jason, and thankfully he was at the office. I requested the tour that h
 
 Conversing as we walked in to the Media Temple "Lair", he introduced me to pretty much every employee that was working that day. The sales managers, the support techs (who for some reason worked without the lights on), the admins and the designer. To tell you the truth, I was amazed, I never thought I would actually see the place that contained the staff of one of the largest and most respected hosting companies in the world, let alone in our community. Although Jason had said that they were already in the process of moving out, which was backed up by the huge number of boxes lying around, it was still a great feeling to be there.
 
-<a href="http://www.flickr.com/photos/avalonstar/27599265/" title="Photo Sharing"><img src="http://photos23.flickr.com/27599265_d4248665ac_m.jpg" width="240" height="160" alt="Moving Out" /></a>
+<a href="http://www.flickr.com/photos/avalonstar/27599265/" title="Photo Sharing"><img src="https://photos23.flickr.com/27599265_d4248665ac_m.jpg" width="240" height="160" alt="Moving Out" /></a>
 
 Sadly, the excitement had to come to and end, as people there do work, so we made our way out and ran into a few other employees (Ryan, Edward and David). I think you'll remember David from the prior article:
 
