--- a/web/content/posts/2005-07-23-an-omen-of-death.mdx
+++ b/web/content/posts/2005-07-23-an-omen-of-death.mdx
@@ -3,7 +3,7 @@ title: "An Omen of Death?"
 date: 2005-07-23T13:00:00Z
 ---
 
-[<img src="http://photos22.flickr.com/28053077_775ca3429a.jpg" width="330" height="220" alt="Best Fortune Cookie... Ever" />][1]
+[<img src="https://photos22.flickr.com/28053077_775ca3429a.jpg" width="330" height="220" alt="Best Fortune Cookie... Ever" />][1]
 
 Today I ate a scrumptious buffet lunch at this place where my family used to go all the time, then got tired of. Well, the food wasn't that great. But I got the best fortune cookie, an empty bag that was supposed to contain a fortune cookie. No, this is not a joke, that bag isn't open and all the air is still inside it. I couldn't help but burst out laughing when I got it, since everybody else grabbed for the cookies and I was left with the bag. That's what I get for being too slow I guess.
 
