--- a/web/content/posts/2005-07-31-kick-ass-and-take-names.mdx
+++ b/web/content/posts/2005-07-31-kick-ass-and-take-names.mdx
@@ -3,7 +3,7 @@ title: "Kick Ass and Take Names"
 date: 2005-07-31T15:00:00Z
 ---
 
-[<img src="http://photos23.flickr.com/30118241_35fc4ae248_b.jpg" width="330" height="220" alt="Best Fortune Cookie... Ever" />][1]
+[<img src="https://photos23.flickr.com/30118241_35fc4ae248_b.jpg" width="330" height="220" alt="Best Fortune Cookie... Ever" />][1]
 
 Really, I'm so glad I'm writing a title like that instead of "Get Ass Kicked and Cry."
 
