--- a/web/content/posts/2006-04-01-23.mdx
+++ b/web/content/posts/2006-04-01-23.mdx
@@ -5,7 +5,7 @@ date: 2006-04-01T21:00:00Z
 
 ## The Myth
 
-There usually isn't anything special about turning 23, at least from what I hear. It's in between *being able to get legally drunk* and *saving money on your car insurance* or *[not having to pay the underage rate when renting a car][1]* stage. The average 23-year-old has been out of college for some time now and is either attending grad school or working at their first "real" job. Metabolism is a word of the past (since that function shut off at 21) as is the phrase "term break." Anybody who has turned 23 can say that they remember "the good old days" but they aren't old enough to use that as a way to escape an argument.
+There usually isn't anything special about turning 23, at least from what I hear. It's in between *being able to get legally drunk* and *saving money on your car insurance* or *not having to pay the underage rate when renting a car* stage. The average 23-year-old has been out of college for some time now and is either attending grad school or working at their first "real" job. Metabolism is a word of the past (since that function shut off at 21) as is the phrase "term break." Anybody who has turned 23 can say that they remember "the good old days" but they aren't old enough to use that as a way to escape an argument.
 
 If you think of 23 years as a number rather than an age, then you have the number that describes how long it takes for Congress to pass a bill. Researchers and scientists could take this amount of time to study one person's actions, or it could be the amount of time taken to develop a groundbreaking technology. Unrealistic, sure. Then there are those people who unfortunately haven't even made it to 23.
 
@@ -21,9 +21,4 @@ So yes, I do turn 23 today. However, instead of dreading it, I'm pretty confiden
 
 Well, if you're bored today and you have a little time, I'd love to hear from you. :)
 
-[<img alt="Send Me A Message" border="0" height="82" src="http://odeo.com/img/badge-send-me-button-white.gif" width="207" />][2]
-
 (PS: Thanks for all the birthday wishes guys, and thanks again to <a href="http://paulstamatiou.com" rel="friend">Paul</a> for the iTMS gift - really, you didn't need to do that.)
-
-[1]: http://avalonstar.com/2006/jan/31/thrifty-enterprise-and-under-25-crowd/
-[2]: http://odeo.com/sendmeamessage/BryanVeloso
