--- a/web/content/posts/2006-10-30-happy-halloween.mdx
+++ b/web/content/posts/2006-10-30-happy-halloween.mdx
@@ -9,7 +9,7 @@ In the quirky spirit of this holiday, I wanted to share with you something that 
 
 Hope you enjoy it - it's definitely worth all 10 minutes, 31 seconds. ;)
 
-<object width="425" height="350"><param name="movie" value="http://www.youtube.com/v/uPtwGRQ2ITM"></param><param name="wmode" value="transparent"></param><embed src="http://www.youtube.com/v/uPtwGRQ2ITM" type="application/x-shockwave-flash" wmode="transparent" width="425" height="350"></embed></object>
+<object width="425" height="350"><param name="movie" value="https://www.youtube.com/v/uPtwGRQ2ITM"></param><param name="wmode" value="transparent"></param><embed src="https://www.youtube.com/v/uPtwGRQ2ITM" type="application/x-shockwave-flash" wmode="transparent" width="425" height="350"></embed></object>
 
 (Oh, and [click here if you want the lyrics][2].)
 
