--- a/web/content/posts/2008-03-30-the-design-distortion.mdx
+++ b/web/content/posts/2008-03-30-the-design-distortion.mdx
@@ -7,7 +7,7 @@ For once in my career, I'm actually going to talk about the a design I did. I do
 
 It's 30 minutes of me talking, Jen typing and the kitties even hiss! I think you can hear sirens as well, but just ignore that, my headset is a bit more sensitive than I had ever intended.
 
-<object type="application/x-shockwave-flash" width="629" height="354" data="http://www.vimeo.com/moogaloop.swf?clip_id=837628&amp;server=www.vimeo.com&amp;fullscreen=1&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef">   <param name="quality" value="best" />   <param name="allowfullscreen" value="true" />   <param name="scale" value="showAll" />  <param name="movie" value="http://www.vimeo.com/moogaloop.swf?clip_id=837628&amp;server=www.vimeo.com&amp;fullscreen=1&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef" /></object>
+<object type="application/x-shockwave-flash" width="629" height="354" data="https://www.vimeo.com/moogaloop.swf?clip_id=837628&amp;server=www.vimeo.com&amp;fullscreen=1&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef">   <param name="quality" value="best" />   <param name="allowfullscreen" value="true" />   <param name="scale" value="showAll" />  <param name="movie" value="https://www.vimeo.com/moogaloop.swf?clip_id=837628&amp;server=www.vimeo.com&amp;fullscreen=1&amp;show_title=1&amp;show_byline=1&amp;show_portrait=0&amp;color=00adef" /></object>
 
 I strongly encourage you to watch this in fullscreen as I have spent my week's [Vimeo][2] quota bringing this to you in lovely HD.  I know I didn't cover everything either, so as I'll say in the video, make sure to email me or leave me comments! Wether or not I answer them in another video or write about it has yet to be decided.
 
@@ -17,4 +17,4 @@ But anyway, enjoy it! I'm pretty happy with it myself... and that's rare. [Here'
 
 [1]: http://www.varasoftware.com/products/screenflow/
 [2]: http://vimeo.com/
-[3]: http://www.vimeo.com/837628/l:embed_837628
+[3]: https://www.vimeo.com/837628/l:embed_837628
