--- a/web/content/posts/2008-09-11-twenty-twenty-two.mdx
+++ b/web/content/posts/2008-09-11-twenty-twenty-two.mdx
@@ -3,9 +3,7 @@ title: "Twenty Twenty Two"
 date: 2008-09-11T11:15:00Z
 ---
 
-The issue. HTML5. Well, honestly it's not an issue-issue. If you've read anything this past week (or if you're just catching up like I have, damn naps), you've seen [something like this][1] regarding the "space-travel map" to HTML5.
-
-![Going to the moon, BRB](http://lolcat.com/pics/tothemooncat.jpg)
+The issue. HTML5. Well, honestly it's not an issue-issue. If you've read anything this past week (or if you're just catching up like I have, damn naps), you've seen something like this regarding the "space-travel map" to HTML5.
 
 * First W3C Working Draft in October 2007.
 * Last Call Working Draft in October 2009.
@@ -17,7 +15,4 @@ The issue. HTML5. Well, honestly it's not an issue-issue. If you've read anythin
 * Reissued Last Call Working Draft in 2020.
 * Proposed Recommendation in **2022**.
 
-[*Two-thousand-twenty-two.*][1] That's 14 years from now. Can any of us think that far? Wouldn't our robot overlords, whether you welcome them or not, have taken over by then? Will the internet even matter then? **I want to hear some raw thoughts on this**, because honestly, I'm still laughing. Maybe we should start putting HTML5 into Little Einstein videos, so by the time our children are of age, they'll be able to use this. :)
-
-[1]: http://blogs.techrepublic.com.com/programming-and-development/?p=718
-[2]: http://ishtml5readyyet.com/
+*Two-thousand-twenty-two.* That's 14 years from now. Can any of us think that far? Wouldn't our robot overlords, whether you welcome them or not, have taken over by then? Will the internet even matter then? **I want to hear some raw thoughts on this**, because honestly, I'm still laughing. Maybe we should start putting HTML5 into Little Einstein videos, so by the time our children are of age, they'll be able to use this. :)
