--- a/web/content/posts/2011-12-22-spoon-feeding.mdx
+++ b/web/content/posts/2011-12-22-spoon-feeding.mdx
@@ -9,7 +9,7 @@ Like many of the games that have defined my history as a gamer—Final Fantasy, 
 
 But here's where I'll stop and encourage you to watch the video below. It is a bit long, but don't let that stop you! Even if you're not a fan of this style of presentation, the message behind this video is powerful *and* equally universal.
 
-<div class="embed-container"> <iframe src="http://www.youtube.com/embed/8FpigqfcvlM?hd=1" frameborder="0" allowfullscreen="allowfullscreen"></iframe> </div>
+<div class="embed-container"> <iframe src="https://www.youtube.com/embed/8FpigqfcvlM?hd=1" frameborder="0" allowfullscreen="allowfullscreen"></iframe> </div>
 
 Did you finish it? Good. Now nod if you agree with it's message. Note that [Arin][4] expectedly only mentions game developers when it comes to the notion of introducing a user to your experience, but it applies everywhere.
 
@@ -20,9 +20,9 @@ In fear of veering off-topic, I'll save you the blabbering and let you take the 
 Nothing annoys somebody more than being forcefully taught something they already know.
 
 [1]: http://en.wikipedia.org/wiki/Mega_Man_X_(video_game)
-[2]: http://www.youtube.com/watch?v=Ja5QUTlgZ3Y
-[3]: http://www.youtube.com/watch?v=1uYeags6JMw
+[2]: https://www.youtube.com/watch?v=Ja5QUTlgZ3Y
+[3]: https://www.youtube.com/watch?v=1uYeags6JMw
 [4]: https://twitter.com/#!/egoraptor
 [5]: http://tapbots.com/software/tweetbot/
-[6]: http://www.youtube.com/watch?v=lCjyiEOZP44
+[6]: https://www.youtube.com/watch?v=lCjyiEOZP44
 [7]: http://zachholman.com/posts/swearing/
